Fix code scroll on mobile (thanks unai)

--- a/src/components/QuizQuestion.css
+++ b/src/components/QuizQuestion.css
@@ -27,10 +27,19 @@
   justify-content: center;
   align-items: center;
 
-  /* min-width: 800px; */
-
   & code {
     tab-size: 2;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .hint pre {
+    min-width: auto;
+    font-size: 18px;
+    max-width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+    overflow-x: scroll;
   }
 }
 
